fixed footer so it doesnt overlap

--- a/gr-recycle/src/app/app.component.css
+++ b/gr-recycle/src/app/app.component.css
@@ -6,22 +6,19 @@ html {
 
 footer {
     display: flex;
-    justify-content: stretch;
-    max-width: 100%;
     font-size: 10px;
     text-align: center;
     padding: 10px;
+    flex-direction: row;
 }
 
 .nav {
     display: flex;
-    width: 40px;
+    width: 50px;
     padding-left: 10px;
     padding-right: 10px;
-    flex-direction: row;
     align-items: baseline;
-    justify-content: space-evenly;
-    text-align: center;
+    justify-content: center;
 }
 
 div {
